# GeoCare

./: .gitignore  .pre-commit-config.yaml  README.md  geoutils.py  main.py  pyproject.toml
agentic_retrieval/: .env.example  capabilities.py  export_enriched_csv.py  genie_client.py  merge_geocoding.py  preprocessing.py  ranking_agent.py  requirements.txt
agentic_retrieval/api/: server.py
agentic_retrieval/clients/: gemini_client.py  llm_client.py
agentic_retrieval/data/source/: Virtue Foundation Ghana v0.3 - Sheet1.csv
agentic_retrieval/docs/: all_facts.txt  schema_info.txt
data/: Virtue-Foundation-Ghana-enriched_geocoded.csv  gha_pop_2025_CN_1km_R2025A_UA_v1.tif  ghana_aoi.gpkg
geoprocessing/: download_graph.ipynb  download_graph.py  geocode.ipynb  geocode.py  geoprocessing.py  geoutils.py  graph_processing.py  h3_utils.py  isochrones.py  map_utils.py  osm.py  population.py  quality_utils.py  raster_utils.py  run_pipeline.py
geoprocessing/results/: coverage_AIDS_treatment_facilities.geojson  coverage_AIDS_treatment_isochrones.geojson  ghana_boundary.geojson  population_h3_res_5.csv  population_h3_res_7.csv
presentation/: config.css  presentation.html  presentation.md
presentation/maps/: mean_interval.html
presentation/themes/: themes.css
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.jsx  index.css
