[project]
name = "health-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "rapidfuzz>=3.14.3",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
