[project]
name = "health-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "h3>=4.4.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "opencage>=3.2.0",
    "osm2geojson>=0.3.1",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "rapidfuzz>=3.14.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
